<?xml version="1.0" encoding="utf-8"?>
<com.amar.library.ui.StickyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackBackground"
    android:fillViewport="true"
    android:nestedScrollingEnabled="false"
    android:scrollbars="none"
    app:stickyHeader="@id/toolbar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/ivBackdropDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:contentDescription="@string/backdrop"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPoster"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:elevation="4dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBackdropDetail">

            <ImageView
                android:id="@+id/ivPosterDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitleDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/whiteColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cvPoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvPoster"
            app:layout_constraintTop_toTopOf="@id/cvPoster"
            tools:text="Mission Impossible" />

        <TextView
            android:id="@+id/tvGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/whiteColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/tvTitleDetail"
            app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
            app:layout_constraintTop_toBottomOf="@id/tvTitleDetail"
            tools:text="Aksi, Komedi, Aksi, Komedi" />

        <ImageView
            android:id="@+id/ivClock"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:contentDescription="@string/runtime"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toBottomOf="@id/tvRuntime"
            app:layout_constraintEnd_toStartOf="@id/tvRuntime"
            app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
            app:layout_constraintTop_toTopOf="@id/tvRuntime" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvRating"
            app:layout_constraintEnd_toStartOf="@id/ivStar"
            app:layout_constraintStart_toEndOf="@id/ivClock"
            app:layout_constraintTop_toTopOf="@id/tvRating"
            tools:text="120 Menit" />


        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:contentDescription="@string/rating"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/tvRating"
            app:layout_constraintEnd_toStartOf="@id/tvRating"
            app:layout_constraintTop_toTopOf="@id/tvRating" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cvPoster"
            app:layout_constraintEnd_toEndOf="@id/tvTitleDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvGenres"
            tools:text="7.9" />


        <TextView
            android:id="@+id/tvOverviewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/overview"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ivFavorite"
            app:layout_constraintStart_toStartOf="@id/cvPoster"
            app:layout_constraintTop_toBottomOf="@id/cvPoster" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/whiteColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/ivFavorite"
            app:layout_constraintStart_toStartOf="@id/tvOverviewTitle"
            app:layout_constraintTop_toBottomOf="@id/tvOverviewTitle"
            tools:text="Following the events of “Avengers: Endgame”, the Falcon, Sam Wilson and the Winter Soldier, Bucky Barnes team up in a global adventure that tests their abilities, and their patience." />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvOverviewTitle"
            app:layout_constraintTop_toTopOf="@+id/tvOverviewTitle" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.amar.library.ui.StickyScrollView>
